--- a/styles/style.css
+++ b/styles/style.css
@@ -1,10 +1,3 @@
-/*fonts*/
-@font-face {
-    font-family: Connection;
-    src: url("fonts/Connection.otf");
-}
-
-
 /*modifiers*/
 .m--hide {
     opacity: 0;
@@ -57,7 +50,7 @@ body {
 .game_box {
     margin-top:30px;
     color: limegreen;
-    font-family: Connection;
+    font-family: 'Press Start 2P';
     font-size:16px;
     text-align: center;
 }
@@ -71,7 +64,7 @@ body {
     margin-right: 30px;
     background: rgb(20, 31, 20);
     color: limegreen;
-    font-family: Connection;
+    font-family: 'Press Start 2P';
     text-align: center;
     border-style: solid;
     border-width: 1px;
@@ -88,7 +81,7 @@ body {
     margin-right: 30px;
     background: rgb(20, 31, 20);
     color: limegreen;
-    font-family: Connection;
+    font-family: 'Press Start 2P';;
     text-align: center;
     border-style: solid;
     border-width: 1px;
@@ -124,6 +117,6 @@ body {
     margin-top:10px;
     margin-left:30px;
     margin-right: 30px;
-    font-family: Connection;
+    font-family: 'Press Start 2P';
     text-align: center;
 }
